@@ -1,3 +1,7 @@
+2009-06-05  Andrew Haley  <aph@redhat.com>
+
+	* src/x86/win32.S (_ffi_closure_STDCALL): Import from gcc.
+
 2009-05-22  Dave Korn  <dave.korn.cygwin@gmail.com>
 
        * src/x86/win32.S (_ffi_closure_STDCALL):  New function.
